# Trackie-Studio

./: CMakeLists.txt  README.md  index.html  logic.cpp  main.js  package-lock.json  package.json  renderer.js  styles.css
resources/: resources.qrc
resources/icons/: .gitkeep
resources/styles/: dark_theme.qss
src/: main.cpp
src/components/: CentralPanel.cpp  CentralPanel.h  LeftSidebar.cpp  LeftSidebar.h  RightSidebar.cpp  RightSidebar.h
src/components/centralpanel/: IconButton.cpp  IconButton.h  centralpanel.cpp  centralpanel.h
src/components/leftsidebar/: leftsidebar.cpp  leftsidebar.h
src/components/loadingscreen/: loadingscreen.cpp  loadingscreen.h
src/components/rightsidebar/: ToggleSwitch.cpp  ToggleSwitch.h  rightsidebar.cpp  rightsidebar.h
src/core/: app.cpp  app.h
src/mainwindow/: mainwindow.cpp  mainwindow.h
src/ui/: center_panel.cpp  center_panel.h  left_sidebar.cpp  left_sidebar.h  main_view.cpp  main_view.h  right_sidebar.cpp  right_sidebar.h  splash_screen.c  splash_screen.cpp  splash_screen.h
src/windows/: MainWindow.cpp  MainWindow.h
